# mandrill

./: .gitignore  Gemfile  Guardfile  LICENSE  README.md  mandrill.cabal
src/Data/API/Tools/: Mandrill.hs
src/Network/Mandrill/: ApiError.hs  Exports.hs  Inbound.hs  Ips.hs  Messages.hs  Metadata.hs  Monad.hs  Rejects.hs  Response.hs  Senders.hs  Subaccounts.hs  Tags.hs  Templates.hs  Types.hs  Urls.hs  Users.hs  Utils.hs  Webhooks.hs  Whitelists.hs
src/Network/Mandrill/TH/: Messages.hs  Rejects.hs  Types.hs  Users.hs  Utils.hs
test/Network/Mandrill/: ExportsSpec.hs  InboundSpec.hs  IpsSpec.hs  MessagesSpec.hs  MetadataSpec.hs  RejectsSpec.hs  SendersSpec.hs  SubaccountsSpec.hs  TagsSpec.hs  TemplatesSpec.hs  UrlsSpec.hs  UsersSpec.hs  WebhooksSpec.hs  WhitelistsSpec.hs
