name:                mandrill
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Karsten Gebbert
maintainer:          k@ioctl.it
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:         >=1.10

library
  -- ghc-options:         -ddump-splices

  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Network.Mandrill.Types
                     , Network.Mandrill.ApiError
                     , Network.Mandrill.Exports
                     , Network.Mandrill.Inbound
                     , Network.Mandrill.Ips
                     , Network.Mandrill.Messages
                     , Network.Mandrill.Metadata
                     , Network.Mandrill.Rejects
                     , Network.Mandrill.Senders
                     , Network.Mandrill.Subaccounts
                     , Network.Mandrill.Tags
                     , Network.Mandrill.Templates
                     , Network.Mandrill.Urls
                     , Network.Mandrill.Users
                     , Network.Mandrill.Webhooks
                     , Network.Mandrill.Whitelists
  
  -- Modules included in this library but not exported.
  other-modules:       Network.Mandrill.TH.Utils
                     , Network.Mandrill.TH.Users
                     , Network.Mandrill.TH.Messages
                     , Network.Mandrill.Utils
                     , Data.API.Tools.Mandrill

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    DeriveDataTypeable

  build-depends:       base >=4.7 && <4.8
                     , api-tools
                     , template-haskell
                     , aeson
                     , http-conduit
                     , bytestring
                     , transformers
                     , data-default

test-suite mandrill-tests
  type:                exitcode-stdio-1.0

  ghc-options:         -Wall -Werror 
  
  hs-source-dirs:      src
                     , test
  
  main-is:             Spec.hs

  other-modules:       Network.Mandrill.Types
                     , Network.Mandrill.ApiError
                     , Network.Mandrill.Users
                     , Network.Mandrill.Utils
                     , Data.API.Tools.Mandrill

  build-depends:       base >=4.7 && <4.8 
                     , hspec
                     , QuickCheck
                     , api-tools
                     , template-haskell
                     , aeson
                     , http-conduit
                     , bytestring
                     , transformers
                     , data-default

  default-language:    Haskell2010